--- a/src/index.scss
+++ b/src/index.scss
@@ -31,7 +31,7 @@ main {
   height: 100vh;
   grid-template-rows: 73px 1fr;
   grid-template-columns: 1fr;
-  grid-gap: $spacing;
+  grid-row-gap: $spacing;
 
   @media(min-width: $tablet) {
     grid-template-rows: 1fr;
@@ -44,6 +44,9 @@ main {
   }
 
   .main-content {
+    display: grid;
+    grid-template-columns: 1fr;
+    align-self: start;
     overflow: auto;
     grid-row-start: 2;
 
